--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dig Dug - Classic Arcade Game</title>
-  <link rel="stylesheet" href="/src/styles.css">
-</head>
-<body>
-  <div id="game-container">
-    <div id="game"></div>
-  </div>
-  <script type="module" src="/src/index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Dig Dug - Classic Arcade Game</title>
+        <link rel="stylesheet" href="/src/styles.css" />
+    </head>
+    <body>
+        <div id="game"></div>
+        <script type="module" src="/src/index.js"></script>
+    </body>
 </html>
